--- a/assets/css/beautifuljekyll.css
+++ b/assets/css/beautifuljekyll.css
@@ -370,9 +370,14 @@ img {
 
 footer {
   padding: 1.875rem 0;
+  border-top: 1px #EAEAEA solid;
   margin-top: 3.125rem;
   font-size: 0.875rem;
-  background-color: "linear-gradient(to right, #FF006E, #FFBE0B);";
+  background-color: {{ site.footer-col | default: "linear-gradient(to right, #FF006E, #FFBE0B);" }};
+  {% if site.footer-img %}
+    background-image: url({{ site.footer-img | relative_url }});
+    background-attachment: fixed;
+  {% endif %}
 }
 
 footer p.text-muted {
