--- a/assets/css/beautifuljekyll.css
+++ b/assets/css/beautifuljekyll.css
@@ -373,15 +373,11 @@ footer {
   border-top: 1px #EAEAEA solid;
   margin-top: 3.125rem;
   font-size: 0.875rem;
-  background-color: {{ site.footer-col | default: "linear-gradient(to right, #FF006E, #FFBE0B);" }};
+  background-color: {{ site.footer-col | default: "#EAEAEA" }};
   {% if site.footer-img %}
     background-image: url({{ site.footer-img | relative_url }});
     background-attachment: fixed;
   {% endif %}
-}
-
-footer container-md beautiful-jekyll-footer {
-  background-image: "linear-gradient(to right, #FF006E, #FFBE0B);"
 }
 
 footer p.text-muted {
